--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.27.0",
     "swiper": "^11.1.14",
     "three": "^0.169.0",
-    "three-globe": "^2.33.0"
+    "three-globe": "^2.33.0",
+    "weather_v_1.0.01": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
